completed Pixie algorithm explanation

--- a/Programming_Assignment-1.ipynb
+++ b/Programming_Assignment-1.ipynb
@@ -3091,13 +3091,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "id": "jol9nRDau6fZ"
    },
    "outputs": [],
    "source": [
-    "# Submit the Github Link here:\n"
+    "# Submit the Github Link here:\n",
+    "https://github.com/Sm3ggl3s/Movie-Recommendation"
    ]
   },
   {
